--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -1,10 +1,10 @@
 <body>
 <div class="container">
 <p id="notice"><%= notice %></p>
-
+<p><img src="http://abtach.com/wp-content/themes/gt3-wp-eagle-child/ruby.png"alt="rails"></p>
 <h1>ToDo List</h1>
 
-<table class="table-condensed table-bordered">
+<table class="table table-condensed table-bordered">
   <thead>
     <tr>
       <th>Description</th>
@@ -25,6 +25,6 @@
 </table>
 
 <br>
-<%= link_to 'New Todo item ', new_todo_item_path %>
+<p><%= link_to 'New Todo item ', new_todo_item_path %></p>
 </div>
 </body>
