--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -1,3 +1,4 @@
+<body>
 <%= form_for(@todo_item) do |f| %>
   <% if @todo_item.errors.any? %>
     <div id="error_explanation">
@@ -19,3 +20,4 @@
     <%= f.submit %>
   </div>
 <% end %>
+</body>
