--- a/app/views/todo_items/index.html.erb
+++ b/app/views/todo_items/index.html.erb
@@ -4,7 +4,7 @@
 <p><img src="http://abtach.com/wp-content/themes/gt3-wp-eagle-child/ruby.png"alt="rails"></p>
 <h1>ToDo List</h1>
 
-<table class="table table-condensed table-bordered">
+<table class="table no-spacing table-condensed table-bordered">
   <thead>
     <tr>
       <th>Description</th>
@@ -25,6 +25,6 @@
 </table>
 
 <br>
-<p><%= link_to 'New Todo item ', new_todo_item_path %></p>
+<i class="btn btn-primary center-block"><%= link_to 'New Todo item ', new_todo_item_path %></i>
 </div>
 </body>
