--- a/app/views/todo_items/new.html.erb
+++ b/app/views/todo_items/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Todo Item</h1>
 
-<%= render 'form' %>
+<p><%= render 'form' %></p>
 
-<%= link_to 'Back', todo_items_path %>
+<p><%= link_to 'Back', todo_items_path %></p>
